--- a/config.toml
+++ b/config.toml
@@ -6,7 +6,7 @@ theme = "minimal"
 googleAnalytics = ""
 disqusShortname = ""
 ignoreFiles = ["\\.Rmd$", "_files$", "_cache$"]
-backgroundImage: "https://github.com/noreastrconf/noreastrconf.github.io/blob/master/content/ri-coast.jpg?raw=true"
+backgroundImage = "https://github.com/noreastrconf/noreastrconf.github.io/blob/master/content/ri-coast.jpg?raw=true"
 
 
 [permalinks]
