trying this cover image thing

--- a/config.toml
+++ b/config.toml
@@ -7,6 +7,7 @@ googleAnalytics = ""
 disqusShortname = ""
 ignoreFiles = ["\\.Rmd$", "_files$", "_cache$"]
 backgroundImage = "https://github.com/noreastrconf/noreastrconf.github.io/blob/master/content/ri-coast.jpg?raw=true"
+coverImage = "https://github.com/noreastrconf/noreastrconf.github.io/blob/master/content/ri-coast.jpg?raw=true"
 
 
 [permalinks]
