changed spelling to Nor'eastR as it is closer to the real spelling!

--- a/config.toml
+++ b/config.toml
@@ -1,7 +1,7 @@
 baseurl = "/"
 relativeurls = true
 languageCode = "en-us"
-title = "Noreast'R Conference"
+title = "Nor'eastR Conference"
 theme = "minimal"
 googleAnalytics = ""
 disqusShortname = ""
