added Manning to sponsors

--- a/config.toml
+++ b/config.toml
@@ -88,6 +88,13 @@ backgroundImage = "https://github.com/noreastrconf/noreastrconf.github.io/blob/m
         url = "https://ci.uri.edu"
         twitter = "uri_coastalinst"
         level = ""
+        
+    [[params.sponsors]]
+        name = "Manning Publications"
+        logo = "/Manninglogo_outline.png"
+        url = "https://www.manning.com/"
+        twitter = "ManningBooks"
+        level = ""
     
 
     
